# eigakan

./: .gitignore  DATABASE.MD  README.MD  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
.mise/: config.toml
.mise/tasks/db/: dbml
data/: _preprocessing.py  accessibility.csv  data-clean.geojson  data.geojson  owner.csv
docker/: .env.example  Dockerfile  compose.yaml
src/eigakan/: __init__.py  api.py  cli.py  dependencies.py  env.py  handlers.py  logger.py  main.py  middleware.py  models.py  schemas.py  types.py
src/eigakan/auth/: dependencies.py  exc.py  models.py  password.py  router.py  schemas.py  token.py
src/eigakan/core/: cud.py  exc.py  statement.py
src/eigakan/core/updaters/: __init__.py  commons.py  exc.py  pagination.py  sort.py  updater.py
src/eigakan/database/: core.py  enums.py  manage.py
src/eigakan/theater/: dependencies.py  models.py  router.py  schemas.py  updaters.py
static/: index.html
tests/: conftest.py  database.py  factories.py
tests/theater/: test_crud.py
